--- a/problems/autocomplete/styles.css
+++ b/problems/autocomplete/styles.css
@@ -1,48 +1,64 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f9;
+section {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-}
-
-.autocomplete-container {
-    width: 300px;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    gap: 1rem;
+  }
+  
+  .search__input-options {
+    position: relative;
+  }
+  
+  .autocomplete-options {
+    list-style-type: none;
+    position: absolute;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    padding-inline-start: 0px;
+    width: 200px;
+    top: 2.5rem;
+    border: 1px solid #f1f1f1;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    border-radius: 0.25rem;
+  }
+  
+  .autocomplete-options li {
+    padding: 1rem;
+    border-top: 1px solid #f1f1f1;
+    border-radius: 0.25rem;
+    background: white;
+    margin: auto;
     text-align: center;
-}
-
-#autocomplete-input {
-    width: 90%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    margin-bottom: 10px;
-}
-
-#autocomplete-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    border: 1px solid #ccc;
-    border-top: none;
-    border-radius: 0 0 4px 4px;
-    max-height: 150px;
-    overflow-y: auto;
-}
-
-.autocomplete-item {
-    padding: 8px;
-    cursor: pointer;
-    background-color: #fff;
-}
-
-.autocomplete-item:hover {
-    background-color: #f0f0f0;
-}
+  }
+  
+  .autocomplete-options li:first-child {
+    border: none;
+  }
+  
+  .autocomplete-options li:hover {
+    background-color: #f1f1f1;
+  }
+  
+  .highlighted {
+    font-weight: bold;
+  }
+  
+  .input__suggestion {
+    position: relative;
+  }
+  
+  #search-input {
+    position: absolute;
+    padding: 0.5rem;
+    z-index: 2;
+    background-color: transparent;
+  }
+  
+  #autocomplete-suggestion {
+    position: absolute;
+    z-index: 1;
+    padding: 0.5rem;
+    padding-left: 0.6rem;
+    opacity: 0.5;
+    background-color: transparent;
+    top: 0;
+    left: 0;
+  }
